fixed horizontal scroll

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,8 @@
 .router {
-    height: calc(82vh);
+    height: calc(84vh);
+    width: 100%;
  }
+
+body {
+    overflow-x: hidden;
+}
