--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -6,7 +6,6 @@
   overflow: hidden;
   background-color: #184E77;
   padding: 15px 10px 10px 10px;
-  margin: -8px -8px;
   left: 0px;
 }
 
